--- a/CP2K-Specific/Jupyter_Notebooks/plotFromEner.ipynb
+++ b/CP2K-Specific/Jupyter_Notebooks/plotFromEner.ipynb
@@ -54,7 +54,7 @@
     "columns_to_plot = [\"Step\", \"Time\", \"Kinetic Energy\", \"Temperature\", \"Potential Energy\", \"Cons Qty\", \"Time Used\"] # Use these column names below\n",
     "\n",
     "'''\n",
-    "Load in the dataframes here and do all the releveant modifications. Examples provided!\n",
+    "Load in the dataframes here and do all the relevant modifications. Examples provided!\n",
     "'''\n",
     "df = pd.read_csv('CORONENE+AgAIMD-1.ener', skiprows=1, names=column_names, sep=r'\\s+', on_bad_lines='skip') \n",
     "df2 = pd.read_csv('CORONENE_+_Ag_AIMD-1.ener', skiprows=1, names=column_names, sep=r'\\s+', on_bad_lines='skip')\n",
