--- a/CP2K-Specific/Jupyter_Notebooks/plotFromEner.ipynb
+++ b/CP2K-Specific/Jupyter_Notebooks/plotFromEner.ipynb
@@ -75,8 +75,8 @@
     "column_2 = \"Temperature\"\n",
     "colors = [\"black\", \"blue\"]\n",
     "dataframes = [df, df2]\n",
-    "row_min = 0\n",
-    "row_max = min(df['Time[fs]'].iloc[-1], df2['Time[fs]'].iloc[-1]) # Finds the minimum last value for the time, to make sure the plots are equal in size because time steps might differ\n",
+    "row_min = 0 # Specify the minimum row index to use\n",
+    "row_max = min(df['Time[fs]'].iloc[-1], df2['Time[fs]'].iloc[-1]) # Specify the maximum row index to use, in this example finds the minimum last value for the time, to make sure the plots are equal in size because time steps might differ\n",
     "'''\n",
     "Specify the technical details for the plot such as the:\n",
     "width\n",
