--- a/CP2K-Specific/Jupyter_Notebooks/plotFromEner.ipynb
+++ b/CP2K-Specific/Jupyter_Notebooks/plotFromEner.ipynb
@@ -56,8 +56,8 @@
     "'''\n",
     "Load in the dataframes here and do all the relevant modifications. Examples provided!\n",
     "'''\n",
-    "df = pd.read_csv('CORONENE+AgAIMD-1.ener', skiprows=1, names=column_names, sep=r'\\s+', on_bad_lines='skip') \n",
-    "df2 = pd.read_csv('CORONENE_+_Ag_AIMD-1.ener', skiprows=1, names=column_names, sep=r'\\s+', on_bad_lines='skip')\n",
+    "df = pd.read_csv('CORONENE+AgAIMD-1.ener', skiprows=1, names=column_names, sep=r'\\s+', on_bad_lines='skip') #Separate by multiple whitespaces and skip lines with irregular columns\n",
+    "df2 = pd.read_csv('CORONENE_+_Ag_AIMD-1.ener', skiprows=1, names=column_names, sep=r'\\s+', on_bad_lines='skip') #Separate by multiple whitespaces and skip lines with irregular columns\n",
     "\n",
     "'''\n",
     "Put together the information relevant for the plots, including:\n",
